--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,15 +1,47 @@
 .h-container{
-    width: 1480px;
+    width: 100%;
     height: 50px;
+    a{
+        text-decoration: none;
+        color: #000;
+    }
+    img{
+        border-radius: 50%;
+    }
     .h-top-bar{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        border-bottom: 1px solid rgb(127, 126, 126);
         .left-side {
             display: flex;
+            margin-left: 40px;
+            align-items: center;
+            .i-1{
+                margin-left: 25px;
+                padding: 10px;
+                font-size: 14px;
+                &:hover{
+                    cursor: pointer;
+                }
+            }
         }
         .right-side{
             display: flex;
+            align-items: center;
+            margin-right: 40px;
+            .i-2{
+                margin-left: 25px;
+                padding: 10px;
+                font-size: 14px;
+                &:hover{
+                    cursor: pointer;
+                } 
+                i{
+                   margin-right: 5px;
+                   align-items: center;
+               }
+            }
         }
     }
 }
