--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,46 +1,61 @@
-.h-container{
+.h-container {
     width: 100%;
     height: 50px;
-    a{
+
+    a {
         text-decoration: none;
         color: #000;
     }
-    img{
-        border-radius: 50%;
-    }
-    .h-top-bar{
+
+    .h-top-bar {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         border-bottom: 1px solid rgb(127, 126, 126);
+
         .left-side {
             display: flex;
             margin-left: 40px;
             align-items: center;
-            .i-1{
+
+            .i-1 {
                 margin-left: 25px;
                 padding: 10px;
                 font-size: 14px;
-                &:hover{
+
+                &:hover {
                     cursor: pointer;
                 }
             }
         }
-        .right-side{
+
+        .right-side {
             display: flex;
             align-items: center;
             margin-right: 40px;
-            .i-2{
+
+            .i-2 {
+                display: flex;
+                align-items: center;
                 margin-left: 25px;
                 padding: 10px;
                 font-size: 14px;
-                &:hover{
-                    cursor: pointer;
-                } 
-                i{
-                   margin-right: 5px;
-                   align-items: center;
-               }
+                select{
+                    background-color: inherit;
+                    border: none;
+                }
+                .flag-icon {
+                    
+                    img {
+                        border-radius: 50%;
+                        width: 25px;
+                        height: 25px;
+                    }
+                }
+
+                i {
+                    margin-right: 5px;
+                }
             }
         }
     }
