--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&family=Roboto+Condensed:wght@400&display=swap');
 .h-container {
     width: 100%;
-    height: 50px;
+    height: fit-content;
 
     a {
         text-decoration: none;
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        border-bottom: 1px solid rgb(127, 126, 126);
+        border-bottom: 1px solid rgb(159, 158, 158);
 
         .left-side {
             display: flex;
@@ -79,5 +79,8 @@
         
         }
         
+    }
+    .h-searchBar{
+        margin-left: 3vw;
     }
 }
