Added user stuff

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -83,4 +83,21 @@
     .h-searchBar{
         margin-left: 3vw;
     }
+    .user-stuff{
+        display: flex;
+        margin-left: 2vw;
+        .i-3{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 3vw;      
+            color: rgb(88, 87, 87);
+            &:hover{
+                cursor: pointer;
+            }      
+        }
+    }
+    .quickSearch{
+        background-color: #F8F8F8;
+    }
 }
