--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -92,12 +92,17 @@
             align-items: center;
             margin-left: 3vw;      
             color: rgb(88, 87, 87);
-            &:hover{
-                cursor: pointer;
-            }      
+                
         }
     }
     .quickSearch{
         background-color: #F8F8F8;
+        height: 40px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .links{
+            margin-left: 5vw;
+        }
     }
 }
